ACCEPTED - issue 2: Complete the ellipse and circle primitive http://code.google.com/p/mastersketch/issues/detail?id=2 Finished the task